
v0.0.01
-------
First Release.

v0.0.02
-------
Fixed an issue with issues_assignProcess.php where a user would not be redirected.
Added a button above the Table on issues_view.php to go to issues_submit.php.
Set default for category and priority drop downs in issues_submit.php to 'Please Select'.
Added Live Verification to the inputs in issues_submit.php.
Deleted Create Technicians Action in manifest.php.
Added Manage Technicians Action in manifest.php.
Added issues_manage_technicians.php.
Added issues_techniciansDeleteProcess.php.
Fixed 2 issues with the table in issues_manage_technicians.php
Fixed an issues with the drop down menu in issues_createTechnicians.php where you could make a technician a technician.
Fixed Security Issues with issues_discuss_view_post.php and issues_discuss_postProcess.php.
Fixed Security Issue with issues_technicianDeleteProcess.php.
Fixed an issue with the table in issues_manage_technicians.php.
Fixed an issue with issues_createTechnician.php
Updated issues_technicianDeleteProcess.php so it deletes all related data in the helpDeskIssues table.

v0.1.00
-------
Added text next to topLinks to standardise with Gibbon Core.
Fixed a bug with the drop down in issues_createTechnician.php not showing anyone.
Disabled feature to access Resolved issues because of a security issue.
Changed Submit Issue to Create Issue.
Change issues_submit.php to issues_create.php.
Change issues_submitProcess.php to issues_createProcess.php.
Fixed a bug with issues_manage_technicians.php where wrong data would be shown for technicians with no issues.
Added new Create For in issues_create.php where technicians can create issues on behalf of others.
Fixed truncated strings not being displayed correctly in issues_view.php.
Added new column to helpDeskIssue called createdByID.
Added notification sent to person if an issue was created on behalf of them.
Technicians can no longer accept their own issues.
Fixed technicians showing as technicians for their own issues.