@@ -38,3 +38,7 @@ Added new column to helpDeskIssue called createdByID.
 Added notification sent to person if an issue was created on behalf of them.
 Technicians can no longer accept their own issues.
 Fixed technicians showing as technicians for their own issues.
+Fixed technicians showing incorrect issues assigned to them in issues_manage_technicians.php.
+Fixed people not being able to access their own issues.
+Change background colour of technician post in issues_discuss_view.php.
+Changed Issue Filter default to "All" if available.
